--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,17 @@
-# Basic set up for three package managers
-
 version: 2
 updates:
 
-  # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
+  # Group: GitHub Actions
+  - group-name: "GitHub Actions Dependencies"
+    package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
 
-  # Maintain dependencies for npm
-  - package-ecosystem: "npm"
+  # Group: npm
+  - group-name: "npm Dependencies"
+    package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 10 
+    open-pull-requests-limit: 10
