--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.13.5",
-    "axios": "^1.4.0",
+    "axios": "1.4.0",
     "framer-motion": "^10.12.16",
-    "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.13.0"
+    "lodash": "4.17.21",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.13.0",
+    "@uidotdev/usehooks": "2.0.1",  
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
