--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "node ./src/tests/simpleTest.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +20,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.13.0",
-    "@uidotdev/usehooks": "2.0.1",  
+    "@uidotdev/usehooks": "2.0.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
