--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "node ./src/tests/simpleTest.js",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.13.5",
+    "@uidotdev/usehooks": "2.0.1",
     "axios": "1.4.0",
     "framer-motion": "^10.12.16",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.13.0",
-    "@uidotdev/usehooks": "2.0.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -32,7 +35,9 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jsdom": "^27.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^1.0.0"
   }
 }
