--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.0",
+    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@uidotdev/usehooks": "2.4.1",
     "axios": "1.12.2",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "lodash": "4.17.21",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.13.0",
     "usehooks-ts": "^2.9.1"
